Refactor add controller and service classes